White colour for the position title

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 		#name {
 			color: white;
 		}
+
+	    	#position {
+			color: white;
+		}
     </style>
 </head>
 <body>
@@ -80,7 +84,7 @@
 
     <header>
         <h1 id="name">Ignacio Ponsoda Llorens</h1>
-        <p>Full Stack and Geo Developer</p>
+        <p id="position">Full Stack and Geo Developer</p>
     </header>
 
     <section>
